# aider

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  HISTORY.md  README.md  __init__.py  __main__.py  args.py  args_formatter.py  assistant_autonome.py  commands.py  discussion_to_voice.py  file_selector.py  file_utils.py  generate_image.py  gui.py  help.py  high_level_motor_planning.py  history.py  io.py  linter.py  llm.py  main  main.py  mdstream.py  models.py  pyproject.toml  r_autonomousAIs_post.md  repo.py  repomap.py  requirements.txt  scrape.py  select_relevant_files.py  sendchat.py  setup.py  urls.py  utils.py  (+2 more)
.aider.tags.cache.v3/: cache.db
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: docker-build-test.yml  docker-release.yml  pages.yml  ubuntu-tests.yml  windows-tests.yml
aider/aider/: file_selector.py  main.py
aider_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
benchmark/: Dockerfile  README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  refactor_tools.py  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
coders/: ask_coder.py  ask_prompts.py  base_coder.py  base_prompts.py  editblock_coder.py  editblock_fenced_coder.py  editblock_func_coder.py  editblock_func_prompts.py  editblock_prompts.py  help_coder.py  help_prompts.py  search_replace.py  single_wholefile_func_coder.py  single_wholefile_func_prompts.py  udiff_coder.py  udiff_prompts.py  wholefile_coder.py  wholefile_func_coder.py  wholefile_func_prompts.py  wholefile_prompts.py
docker/: Dockerfile
queries/: README.md
requirements/: requirements.in
scripts/: blame.py  jekyll_run.sh  update-blame.sh  update-docs.sh  versionbump.py
tests/basic/: test_coder.py  test_commands.py  test_editblock.py  test_history.py  test_io.py  test_main.py  test_models.py  test_repo.py  test_repomap.py  test_scripting.py  test_sendchat.py  (+3 more)
website/: HISTORY.md  _config.yml  index.md
(+102 files in other folders)
