# [[[cog
# from aider_nova.help_pats import exclude_website_pats
# ]]]
# [[[end]]]

[project]
name = "aider_nova-chat"
description = "aider_nova is AI pair programming in your terminal"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
requires-python = ">=3.9,<3.13"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/paul-gauthier/aider_nova"

[project.scripts]
aider_nova = "aider_nova.main:main"

[tool.setuptools.dynamic]
version = { attr = "aider_nova.__init__.__version__" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/requirements-dev.txt" }
help = { file = "requirements/requirements-help.txt" }
browser = { file = "requirements/requirements-browser.txt" }
playwright = { file = "requirements/requirements-playwright.txt" }

[tool.setuptools.packages.find]
include = ["aider_nova*", "aider_nova.website"]

[tool.setuptools.package-data]
"aider_nova" = ["queries/*.scm"]
"aider_nova.website" = ["**/*.md"]

[tool.setuptools.exclude-package-data]
"aider_nova.website" = [
# [[[cog
# cog.out("\n".join(f'    "{pat}",' for pat in exclude_website_pats))
# ]]]
"examples/**",
"_posts/**",
"HISTORY.md",
"docs/benchmarks*md",
"docs/ctags.md",
"docs/unified-diffs.md",
"docs/leaderboards/index.md",
"assets/**",
# [[[end]]]
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
